--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,2 +1,13 @@
 @import "bootstrap";
 @import "navbar";
+@import "comments";
+@import "experiments";
+@import "observations";
+@import "procedures";
+@import "proposals";
+@import "welcome";
+
+
+
+
+
