--- a/app/assets/stylesheets/observations.scss
+++ b/app/assets/stylesheets/observations.scss
@@ -2,3 +2,20 @@
 // Place all the styles related to the observations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.experiment-details{
+  border:1px solid red;
+  width:50%;
+}
+.experiment-procedure{
+  border:1px solid red;
+  width:50%;
+}
+.procedure-observations{
+  border:1px solid red;
+  width:50%;
+}
+.experiment-comments{
+  border:1px solid red;
+  width:50%;
+}
