add proposal view and controller

--- a/app/views/proposals/edit.html.erb
+++ b/app/views/proposals/edit.html.erb
@@ -1,4 +1,7 @@
 <% provide(:user, 'active') %>
 
-<h1>Proposals#edit</h1>
-<p>Find me in app/views/proposals/edit.html.erb</p>
+<h1>Edit proposal</h1>
+ 
+<%= render 'form' %>
+ 
+<%= link_to 'Back', proposals_path %>
