--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,4 +1,6 @@
 <% provide(:user, 'active') %>
 
-<h1>Proposals#new</h1>
-<p>Find me in app/views/proposals/new.html.erb</p>
+
+<%= render 'form' %>
+ 
+<%= link_to 'Back', proposals_path %>
