--- a/app/assets/stylesheets/experiments.scss
+++ b/app/assets/stylesheets/experiments.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the experiments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.border{
+  border:1px solid red;
+  width:50%;
+}
+
+
