Create footer and style homepage/nav bar

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,9 @@
-<nav class="header">
+<footer class="footer">
   <div class="collapse-bg p-a-1">
     <div class='topnav'>
+      <a href="#"> Test
+        <img id="logo" src="logo.png">
+      </a>
         <ul>
           <% if user_signed_in? %>
             <li>
@@ -23,4 +26,4 @@
         </ul>
     </div>
   </div>
-</nav>
+</footer>
