--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,21 @@
-<h1>MadLab</h1>
+<main>
+<h1>Experiment Tracking, Made Easy</h1>
 
+<button></button>
+
+
+<div class="con">
+</div>
+
+<div class="org">
+</div>
+
+<div class="collab">
+  <h3>Collaboration</h3>
+  <p>Our app provides the ability to interact with other users to collaborate on various proposals or experiments. Gather your team to create a new lab correspondance today!</p>
+</div>
+
+
+
+</main>
 
