--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background-image: url("microscope.jpeg");
+   background-size: cover;
+   background-repeat: no-repeat;
+   margin: 0;
+   padding: 0;
+}
+
+h1 {
+  font-family: monopsace;
+  color: dimgrey;
+  text-align: center;
+}
