add experiment edit/form in view

--- a/app/views/experiments/edit.html.erb
+++ b/app/views/experiments/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Experiments#edit</h1>
-<p>Find me in app/views/experiments/edit.html.erb</p>
+<h1>Editing Comment</h1>
+
+<%= render 'form', comment: @comment %>
+
+<%= link_to 'Show', @comment %> |
+<%= link_to 'Back', comments_path %>
