observations controller and views on experiments

--- a/app/views/observations/destroy.html.erb
+++ b/app/views/observations/destroy.html.erb
@@ -1,1 +1,4 @@
-destroy.html.erb
+<% provide(:user, 'active') %>
+
+<h1>Observations#destroy</h1>
+<p>Find me in app/views/observations/destroy.html.erb</p>
