--- a/app/views/observations/new.html.erb
+++ b/app/views/observations/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Observations#new</h1>
-<p>Find me in app/views/observations/new.html.erb</p>
+<% provide(:user, 'active') %>
+
+
+<%= render 'form' %>
+ 
+<%= link_to 'Back', observations_path %>
