--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,9 @@
 <nav class="header">
   <div class="collapse-bg p-a-1">
     <div class='topnav'>
+      <div class="logo">
+      <%= image_tag "logo.png" %>
+      </div>
         <ul>
           <% if user_signed_in? %>
             <li>
