--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,7 +7,74 @@ body {
 }
 
 h1 {
-  font-family: monopsace;
-  color: dimgrey;
+  font-family: sans-serif;
+  color: black;
   text-align: center;
+  margin-top: 75px;
+  font-size: 250%;
+}
+
+h2 {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.button {
+  text-align: center;
+}
+
+button {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: white;
+  font-family: sans-serif;
+  font-size: 100%;
+}
+
+.sell-blocks {
+  margin-top: 200px;
+  margin-right: 200px;
+}
+
+.explain-left, .explain-right {
+  width: 20%;
+  border: solid 1px;
+  margin-right: 50px;
+  margin-left: 50px;
+  padding-right: 20px;
+  padding-left: 20px;
+  font-family: sans-serif;
+  font-size: 90%;
+  padding-bottom: 35px;
+}
+
+.explain-left {
+  float: right;
+  clear: none;
+}
+
+.sell {
+  font-size: 100%;
+}
+
+.explain-right {
+  float: right;
+  clear: none;
+}
+
+#about-title {
+  text-align: left;
+  text-decoration: underline;
+    margin-left: 100px;
+}
+
+.about {
+  font-size: 20px;
+  width: 70%;
+  margin-left: 100px;
+  margin-right: 120px;
+}
+
+#signbutton {
+  color: darkolivegreen;
 }
