--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,28 +1,29 @@
 <footer class="footer">
   <div class="collapse-bg p-a-1">
-    <div class='topnav'>
-      <a href="#"> Test
-        <img id="logo" src="logo.png">
-      </a>
+    <div class='bottomfoot'>
+      <h4 id="year">&copy; 2019</h4>
+
+      <div id="contact">
+        <h4 class="foots">Address</h4>
+          <p>1258 Dexter Lane</p>
+          <p>Motown, USA</p>
+      </div>
+
+      <div id="int">
+        <h4 class="foots">Social</h4>
+          <a class="social" href="https://www.facebook.com/">Facebook</a>
+          <br>
+          <a class="social" href="https://twitter.com/">Twitter</a>
+      </div>
+
+
         <ul>
-          <% if user_signed_in? %>
-            <li>
-              <%= link_to 'Logout', destroy_user_session_path, class: "nav-link", method: :delete %>
+            <li class="foot-other">
+              <%= link_to 'About', about_path  %>
             </li>
-            <li>
-              <%= link_to 'My Profile', user_path(current_user), class: "nav-link" %>
+            <li class="foot-other">
+              <%= link_to 'Help', help_path %>
             </li>
-          <% else %>
-            <li>
-              <%= link_to 'Register', new_user_registration_path, class: "nav-link" %>
-            </li>
-            <li>
-              <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
-            </li>
-          <% end %>
-          <li>
-            <%= link_to 'Home', root_path, class: "nav-link" %>
-          </li>
         </ul>
     </div>
   </div>
