--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,2 +1,7 @@
 <h1>Comments#new</h1>
 <p>Add form here</p>
+<h1>New Comment</h1>
+
+<%= render 'form', comment: @comment %>
+
+<%= link_to 'Back', new_experiment_comment_path %>
