--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -9,9 +9,11 @@
     <h4>Experiment observations</h4>
       <% @experiment.observations.each_with_index do |observation,index|%>
           <p><%="#{index+1}. "%><%= observation.body %></p><br>
-        <% if current_user.id == observation.observable_id %>
-          <%= link_to "Edit"%>
-          <%= link_to "Delete" %>
+        <% if signed_in? %>
+          <% if current_user.id == observation.observable_id %>
+            <%= link_to "Edit"%>
+            <%= link_to "Delete" %>
+          <% end %>
         <% end %>
       <% end %>
       <% if signed_in? %>
@@ -31,9 +33,11 @@
   <% @experiment.procedures.each_with_index do |procedure,index|%>
     <% procedure.observations.each do |observation| %></p><br>
       <p><%="#{index+1}. "%><%= observation.body %></p><br>
-      <% if current_user.id == observation.observable_id %>
-        <%= link_to "Edit"%>
-        <%= link_to "Delete" %>
+      <% if signed_in? %>
+        <% if current_user.id == observation.observable_id %>
+          <%= link_to "Edit"%>
+          <%= link_to "Delete" %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
@@ -50,7 +54,7 @@
   <% experiments = @experiment.experimenter.experiments %>
   <% experiment = experiments.find(params[:id]) %>
   <% if experiment.experimenter.comments.empty?%>
-    <p> There are no comments for this </p>
+    <p> There are no comments for this experiment </p>
   <% else %>
     <%= experiment.experimenter.comments.first.body %>
   <% end %>
@@ -58,7 +62,7 @@
   <% if signed_in? %>
     <%= link_to "Add comment",new_experiment_comment_path(@experiment)%>
     <% if current_user.id == @experiment.experimenter.id %>
-        <%= link_to "Edit"%>
+        <%= link_to "Edit", edit_experiment_comment_path(@experiment)%>
         <%= link_to "Delete" %>
       <% end %>
   <% end %>
