Work on proposal views and protection

--- a/app/assets/stylesheets/proposals.scss
+++ b/app/assets/stylesheets/proposals.scss
@@ -1,3 +1,49 @@
 // Place all the styles related to the proposals controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+* {
+  font-family: sans-serif;
+}
+
+table {
+  margin-top: 25px;
+  margin-left: 25px;
+  margin-right: 20px;
+}
+
+.protitle {
+  padding-bottom: 8px;
+}
+
+#summary {
+  width: 20%;
+  padding-right: 10px;
+}
+
+#hypothesis {
+  width: 60%;
+  padding-right: 30px;
+}
+
+.prolink {
+  padding-right: 15px;
+  padding-left: 2px;
+  float: center;
+  text-align: right;
+}
+
+#proedit {
+  padding-left: 5px;
+  padding-right: 2px;
+}
+
+.showproposal {
+  margin-top: 25px;
+  margin-left: 25px;
+  margin-right: 20px;
+}
+
+p {
+  font-size: 100%;
+}
