--- a/app/views/welcome/help.html.erb
+++ b/app/views/welcome/help.html.erb
@@ -1,1 +1,2 @@
-<h2>We can't help you from here.....Just come by our office!</h2>
+<h1 id="about-title">Help</h1>
+<h2 id="help">We can't help you from here.....Just come by our office!</h2>
