--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -1,6 +1,6 @@
 
 <%= form_for @proposal do |f| %>
- 
+
   <% if @proposal.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -14,19 +14,19 @@
       </ul>
     </div>
   <% end %>
- 
+
  <p>
     <%= f.label :summary %><br>
     <%= f.text_area :summary %>
   </p>
- 
+
   <p>
     <%= f.label :hypothesis %><br>
     <%= f.text_area :hypothesis %>
   </p>
- 
-  <p>
+
+  <p class="submit">
     <%= f.submit %>
   </p>
- 
+
 <% end %>
