--- a/app/views/proposals/edit.html.erb
+++ b/app/views/proposals/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:user, 'active') %>
 
-<h1>Edit proposal</h1>
- 
+<h1>Edit Proposal</h1>
+
 <%= render 'form' %>
- 
+
 <%= link_to 'Back', proposals_path %>
