--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign Up</h2>
+<h1>Sign Up</h1>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-horizontal") do |f| %>
       <%= devise_error_messages! %>
@@ -26,13 +26,13 @@
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
 
-      <div class="form-group">
+      <div class="submit">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
 
-      <div class="form-group">
-        <%= f.submit "Sign up", class: 'btn btn-primary'%>
+      <div class="submit">
+        <%= f.submit "Sign up", class: 'submit'%>
       </div>
     <% end %>
 
