--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,4 +27,8 @@
 
 </main>
 
-<%= link_to 'Proposals', controller: 'proposals' %>
+<div id="proposalsb" class="button">
+  <form>
+    <%= link_to 'Current Proposals', controller: 'proposals', style: 'color:darkolivegreen' %>
+  </form>
+</div>
