Update proposal show and user show

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,8 +5,8 @@
 
       <div id="contact">
         <h4 class="foots">Address</h4>
-          <p>1258 Dexter Lane</p>
-          <p>Motown, USA</p>
+          <p class="address">1258 Dexter Lane</p>
+          <p class="address">Motown, USA</p>
       </div>
 
       <div id="int">
