--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <main>
-<h1>Experiment Tracking, Made Easy</h1>
+<h1 id="main-title">Experiment Tracking, Made Easy</h1>
 
 <div class="button">
   <form>
