--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -2,15 +2,14 @@
   font-family: sans-serif;
 }
 
-h1 {
+.login-title {
   margin-left: -1400px;
 }
 
 form {
-  margin-left: 20px;
-  margin-top: 50px;
+  margin-left: 10px;
+    margin-top: 5px;
 }
-
 
 input {
   text-align: center;
@@ -22,10 +21,15 @@ input {
 
 .submit {
   margin-left: 20px;
-
 }
 
 .actions {
   margin-top: 10px;
   padding: 10px;
+}
+
+.remember {
+  text-align: left;
+  padding-top: 20px;
+  margin-left: 10px;
 }
