--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -26,12 +26,12 @@ h2 {
 
 .button {
   width: 12%;
-  text-align: center;
-  border: solid 1px;
-  border-radius: 20px;
+  border: solid 1px;  border-radius: 20px;
   margin-left: 850px;
   background-color: antiquewhite;
-  padding: 2px;
+  height: 30px;
+  text-align: center;
+  margin-top: -10px;
 }
 
 button {
@@ -39,11 +39,10 @@ button {
   border-radius: 10px;
   background-color: white;
   font-family: sans-serif;
-  font-size: 100%;
 }
 
 #proposalsb {
-  margin-top: 500px;
+  margin-top: 450px;
 }
 
 .sell-blocks {
