--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign Up</h1>
+<h1 class="login-title">Sign Up</h1>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-horizontal") do |f| %>
       <%= devise_error_messages! %>
