style experiment view

--- a/app/assets/stylesheets/experiments.scss
+++ b/app/assets/stylesheets/experiments.scss
@@ -2,10 +2,21 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-.border{
-  border:1px solid red;
+.color {
+  letter-spacing: .08em;
+  color: #fff;
+}
+.position {
+  position: relative;
+  bottom:100px;
   width:50%;
 }
 
+.absolute{
+  position: absolute;
+}
 
+.center {
+  left:400px;
+  text-align: center;
+}
