--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,12 +1,12 @@
-<h1>The Deets on this Experiment!</h1>
 
-<div class="border">
-  <b>Category</b> <%= @experiment.category %><br>
-  <b>RESULTS</b> = > <%= @experiment.results %> <br>
-  <b>CONCLUSION</b> => <%= @experiment.conclusions %> <br>
+<div class="center">
+  <h1 class="color">The Deets on this Experiment!</h1>   
+  <p><b>Category: </b> <%= @experiment.category %></p>
+  <p><b>RESULTS: </b> <%= @experiment.results %> </p>
+  <p><b>CONCLUSION: </b> <%= @experiment.conclusions %></p>
 
-  <div class="border">
-    <h4>Experiment observations</h4>
+  <div class="border center">
+    <h1 class="color">Experiment observations</h1>
       <% @experiment.observations.each_with_index do |observation,index|%>
           <p><%="#{index+1}. "%><%= observation.body %></p><br>
         <% if signed_in? %>
@@ -21,18 +21,18 @@
       <% end %>
   </div>
 </div>
+<hr>
 
-<br><br><br><br>
-
-<h1>Procedures</h1>
-<div class="border">
+<div class="center">
+<h1 class="color">Procedures</h1>
   <% @experiment.procedures.each do |procedure|%>
-    <p><%= procedure.steps %></p>
+    <p><b>Steps Taken:</b> <%= procedure.steps %></p>
   <% end %>
-  <div class="border"><h4>Procedure observations</h4>
+  <div class=""><br>
+    <h4>Procedure observations</h4>
   <% @experiment.procedures.each_with_index do |procedure,index|%>
-    <% procedure.observations.each do |observation| %></p><br>
-      <p><%="#{index+1}. "%><%= observation.body %></p><br>
+    <% procedure.observations.each do |observation| %></p>
+      <p><%="#{index+1}. "%><%= observation.body %></p>
       <% if signed_in? %>
         <% if current_user.id == observation.observable_id %>
           <%= link_to "Edit"%>
@@ -46,11 +46,12 @@
     <%= link_to "Add Observation",new_experiment_procedure_path(@experiment)%>
   <% end %>
 </div>
+<hr>
 
 <br><br><br><br>
 
-<h1>Experiment comments</h1>
-<div class="border">
+<div class="position center ">
+<h1 class="color">Experiment comments</h1>
   <% @experiment.comments.each_with_index do |comment,index| %>
     <% if @experiment.comments.empty?%>
       <p> There are no comments for this experiment </p>
