removed provide(:user, 'active')

--- a/app/views/observations/new.html.erb
+++ b/app/views/observations/new.html.erb
@@ -1,6 +1,3 @@
-<% provide(:user, 'active') %>
-
-
 <%= render 'form' %>
- 
-<%= link_to 'Back', observations_path %>
+
+<%= link_to 'Back', experiment_path %>
