--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -8,7 +8,7 @@
 
 form {
   margin-left: 10px;
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 input {
@@ -20,16 +20,15 @@ input {
 }
 
 .submit {
-  margin-left: 20px;
+  margin-left: 25px;
 }
 
 .actions {
   margin-top: 10px;
   padding: 10px;
+  margin-left: -10px;
 }
 
-.remember {
-  text-align: left;
-  padding-top: 20px;
+.field {
   margin-left: 10px;
 }
