--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -1,27 +1,38 @@
-<%= form_with(model: comment, local: true) do |form| %>
-  <% if comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+<%= form_for @experiment do |f| %>
 
+  <% if @experiment.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@experiment.errors.count, "error") %> prohibited
+        this proposal from being saved:
+      </h2>
       <ul>
-      <% comment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @experiment.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :post_id %>
-    <%= form.number_field :post_id, id: :comment_post_id %>
-  </div>
+ <p>
+    <%= f.label :category %><br>
+    <%= f.text_area :category %>
+  </p>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :comment_body %>
-  </div>
+  <p>
+    <%= f.label :results %><br>
+    <%= f.text_area :results %>
+  </p>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <p>
+    <%= f.label :conclusions %><br>
+    <%= f.text_area :conclusions %>
+  </p>
+
+
+  <p class="submit">
+    <%= f.submit %>
+  </p>
+
 <% end %>
+
