--- a/app/views/experiments/new.html.erb
+++ b/app/views/experiments/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Experiments#new</h1>
-<p>Find me in app/views/experiments/new.html.erb</p>
+<% provide(:user, 'active') %>
+<h1>Create New Experiment</h1>
+
+
+<%= render 'form' %>
+ 
+<%= link_to 'Back', proposal_path(@proposal) %>
+
