--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,22 +3,22 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-horizontal") do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="form-group">
+      <div class="field">
         <%= f.label :first_name %><br />
         <%= f.text_field :first_name, autofocus: true %>
       </div>
 
-      <div class="form-group">
+      <div class="field">
         <%= f.label :last_name %><br />
         <%= f.text_field :last_name, autofocus: true %>
       </div>
 
-      <div class="form-group">
+      <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true %>
       </div>
 
-      <div class="form-group">
+      <div class="field">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -26,14 +26,12 @@
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
 
-      <div class="submit">
+      <div class="field">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
 
-      <div class="submit">
+      <div class="actions">
         <%= f.submit "Sign up", class: 'submit'%>
       </div>
     <% end %>
-
-    <%= render "users/shared/links" %>
