--- a/app/assets/stylesheets/proposals.scss
+++ b/app/assets/stylesheets/proposals.scss
@@ -47,3 +47,24 @@ table {
 p {
   font-size: 100%;
 }
+
+form {
+  margin-left: 20px;
+}
+
+textarea {
+  width: 300px;
+  height: 150px;
+  font-size: 13px;
+}
+
+select {
+  width: 150px;
+  height: 30px;
+  font-size: 12px;
+}
+
+.psubmit {
+  margin-left: -5px;
+}
+
