--- a/app/views/proposals/edit.html.erb
+++ b/app/views/proposals/edit.html.erb
@@ -4,4 +4,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', proposals_path %>
+<%= link_to 'Back', proposals_path, style: 'color:saddlebrown;margin-left:20px;'  %>
