--- a/app/views/experiments/new.html.erb
+++ b/app/views/experiments/new.html.erb
@@ -3,6 +3,6 @@
 
 
 <%= render 'form' %>
- 
-<%= link_to 'Back', proposal_path(@proposal) %>
+
+<%= link_to 'Back', proposal_path(@proposal), style: 'color:saddlebrown' %>
 
