--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,6 +1,7 @@
 <% provide(:user, 'active') %>
+<h1>Create New Proposal</h1>
 
 
 <%= render 'form' %>
- 
-<%= link_to 'Back', proposals_path %>
+
+<%= link_to 'Back', proposals_path, style: 'color:saddlebrown', class: 'newp'  %>
