--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @experiment do |f| %>
+<%= form_for([:proposal,@experiment]) do |f| %>
 
   <% if @experiment.errors.any? %>
     <div id="error_explanation">
@@ -35,4 +35,3 @@
   </p>
 
 <% end %>
-
