--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 <h1 id="main-title">Experiment Tracking, Made Easy</h1>
 
 <div class="button">
-  <form>
+  <form class="button-form">
     <%= link_to 'Sign Up Today!', new_user_registration_path, style: 'color:darkolivegreen' %>
   </form>
 </div>
@@ -28,7 +28,7 @@
 </main>
 
 <div id="proposalsb" class="button">
-  <form>
+  <form class="button-form">
     <%= link_to 'Current Proposals', controller: 'proposals', style: 'color:darkolivegreen' %>
   </form>
 </div>
