--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -27,11 +27,16 @@ h2 {
 .button {
   width: 12%;
   border: solid 1px;  border-radius: 20px;
-  margin-left: 850px;
   background-color: antiquewhite;
   height: 30px;
   text-align: center;
-  margin-top: -10px;
+  margin: 0 auto;
+  padding: 5px;
+  padding-right: 8px;
+}
+
+.button-form{
+  width: 80%3;
 }
 
 button {
