--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,10 +14,8 @@
  = require_self
  */
 
-
 @import "bootstrap";
-@import "bootstrap/theme";
-@import "navbar";
+@import "_navbar";
 @import "comments";
 @import "experiments";
 @import "observations";
