final heroku fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 
 @import "bootstrap";
 @import "_navbar";
+@import "_form";
+@import "_footer";
 @import "comments";
 @import "experiments";
 @import "observations";
