--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -31,12 +31,13 @@ h2 {
   height: 30px;
   text-align: center;
   margin: 0 auto;
-  padding: 5px;
+  padding-bottom: 2px;
   padding-right: 8px;
 }
 
 .button-form{
-  width: 80%3;
+  width: 82%;
+  height: 100%;
 }
 
 button {
