--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 
   <div class="explain-left">
     <h3>Organization</h3>
-    <p class="sell">The clean interface of MadLab is especially user-friendly and streamlined. The app was designed by engineers so you can be sure, they understand the needs of any user of this technical application. Run that next lab meeting paperless!</p>
+    <p class="sell">The clean interface of MadLab is especially user-friendly and streamlined. The app was designed by engineers so you can be sure they understand the needs of this technical application. Run that next lab meeting paperless!</p>
   </div>
 
   <div class="explain-right">
