--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -31,7 +31,7 @@
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
 
-      <div class="actions">
-        <%= f.submit "Sign up", class: 'submit'%>
+      <div class="submit">
+        <%= f.submit "Sign Up", class: 'actions'%>
       </div>
     <% end %>
